Bug 1185104: Move MOZ_WARN_UNUSED_RESULT to the beginning of function-decls (where it's supposed to be) in jsfriendapi.h. r=tromey